[package]
name = "sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "fs"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
# madome-sdk = { git = "https://github.com/Project-Madome/madome-sdk-rs", tag = "0.6.2" }
madome-sdk = { path = "../madome-sdk" }
http-util = { git = "https://github.com/syrflover/util-rs", tag = "0.4.4" }
http = "0.2.8"
parking_lot = { version = "0.12.1", features = ["serde"] }
crawler = { path = "../crawler" }
thiserror = "1.0.32"
async-trait = "0.1.57"
futures = "0.3.23"
log = "0.4.17"
sai = "0.1.4"
dotenv = "0.15.0"
